--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <form action="" onsubmit="searchPokemon(event)">
-        <input type="text" name="pokemon" autocomplete="off">
+        <input type="text" name="pokemon" autocomplete="off"
+        placeholder="¿Que pokemón estás buscando?">
     </form>
     <div data-poke-card class="poke-card">
         <div data-poke-name >Pokedex</div>
